# furc-3ds

./: .gitignore  .gitmodules  3dslink.sh  CMakeLists.txt  Dockerfile  README.md  build.sh  configure.sh  debugger.py  docker-build.sh  docker-setup.sh
.github/workflows/: build-and-publish.yml
src/: CMakeLists.txt
src/fox5/: CMakeLists.txt  fox5.cpp  fox5.h
src/furcformats/: CMakeLists.txt  dreamfile.cpp  dreamfile.h  filecommon.cpp  filecommon.h  fox5.cpp  fox5.h  fox5palette.h
src/lzma/: CMakeLists.txt
src/main/: 3dsshader.cpp  3dsshader.h  3dstexture.cpp  3dstexture.h  CMakeLists.txt  appbase.cpp  appbase.h  banner.bnr  demoscene.cpp  demoscene.h  furcadia.cpp  furcadia.h  icon.icn  main.cpp  main.h  scene.cpp  scene.h  singleton.h  spec.cxi  spec.rsf  sprite.cpp  sprite.h  spritescene.cpp  spritescene.h  testimg.h  texturecache.cpp  texturecache.h  unlit_generic.v.pica
src/main/assets/3ds/: system.fox
src/main/assets/fonts/: fontmap.ini
src/main/assets/platform/: 3ds.fox
